<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_corners"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:srcCompat="@android:drawable/button_onoff_indicator_off" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="170dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_delete"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="180dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/background_btn"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>